# CVE-2023-24871

./: README.md
lpe/: README.md
lpe/exploit/: bthlpe.sln
lpe/exploit/bthlpe_harness/: bthlpe_harness.cpp  bthlpe_harness.vcxproj  bthlpe_harness.vcxproj.filters
lpe/exploit/bthlpe_juicypotato/: JuicyPotatoNG.cpp  bthlpe_juicypotato.vcxproj  bthlpe_juicypotato.vcxproj.filters
lpe/exploit/bthlpe_master/: bthlpe_master.cpp  bthlpe_master.vcxproj  bthlpe_master.vcxproj.filters
lpe/exploit/bthlpe_payload/: bthlpe_payload.cpp  bthlpe_payload.vcxproj  bthlpe_payload.vcxproj.filters
lpe/exploit/shared/: defines.h  utils.h
lpe/poc/: poc.sln
lpe/poc/poc_dll/: dllmain.cpp  poc_dll.vcxproj
lpe/poc/poc_exe/: main.cpp  poc_exe.vcxproj
rce/: LICENSE  README.md
rce/poc/: CMakeLists.txt  Makefile  btstack_config.h  main.c  poc.c
rce/poc/btstack/platform/windows/: hci_dump_windows_fs.c  hci_transport_h2_winusb.c
rce/poc/btstack/src/: hci.c  hci.h
rce/poc/btstack/src/ble/: sm.c
rce/scripts/check_cap/: check_cap.bat  check_cap.ps1
rce/scripts/check_vuln/: check_vuln.bat  check_vuln.ps1
